--- a/smiles/smiles.html
+++ b/smiles/smiles.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="utf-8">
-     <title>Smiles - Matching Game</title>
-     <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Smiles - Matching Game</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-     <h1>Matching Game</h1>
-     <p>Click on the extra smiling face on the left.</p>
-     <script src="js/app.js"></script>
+    <header>
+       <h1>Smiles Matching Game</h1>
+    </header>
+    <p><span id="level"></span>click on the extra smiling face on the left</p>
+    <script src="js/app.js"></script>
 </body>
 </html>
