--- a/frogger/index.html
+++ b/frogger/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Rock+Salt" type="text/css">
 </head>
 <body>
     <script src="js/resources.js"></script>
